# ChangeLog for catalyst
# Copyright 1999-2011 Gentoo Foundation; 2008-2011 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  14 Apr 2011; Raúl Porcel <armin76@gentoo.org> catalyst:
  This is catalyst 2.0.6.916

  14 Apr 2011; Raúl Porcel <armin76@gentoo.org>
  targets/support/bootloader-setup.sh:
  Add gentoo-ilo option for the bootloader on ia64

  10 Apr 2011; Raúl Porcel <armin76@gentoo.org> catalyst,
  targets/support/chroot-functions.sh:
  This is catalyst 2.0.6.915

  10 Apr 2011; Raúl Porcel <armin76@gentoo.org>
  targets/support/chroot-functions.sh:
  Replace virtual/portage with sys-apps/portage, bug #358847

  05 Feb 2011; Raúl Porcel <armin76@gentoo.org> catalyst:
  This is catalyst 2.0.6.914

  05 Feb 2011; Raúl Porcel <armin76@gentoo.org> arch/amd64.py, catalyst:
  Enable new amd64 subarches

  01 Nov 2010; Raúl Porcel <armin76@gentoo.org> catalyst:
  This is catalyst 2.0.6.913

  01 Nov 2010; Raúl Porcel <armin76@gentoo.org> arch/arm.py:
  Fix ARM hardfloat

  01 Nov 2010; Raúl Porcel <armin76@gentoo.org> catalyst:
  This is catalyst 2.0.6.912

  01 Nov 2010; Raúl Porcel <armin76@gentoo.org> arch/mips.py:
  Add patch for Loongson support, patch by Zhang Le <r0bertz at gentoo dot
  org>, bug #330241

  09 Oct 2010; Raúl Porcel <armin76@gentoo.org> catalyst:
  This is catalyst 2.0.6.911

  09 Oct 2010; Raúl Porcel <armin76@gentoo.org> arch/arm.py:
  Replace -Os with -O2 for ARM

  26 Sep 2010; Raúl Porcel <armin76@gentoo.org> arch/arm.py:
  Arm fixes

  11 Sep 2010; Raúl Porcel <armin76@gentoo.org> catalyst:
  This is catalyst-2.0.6.909

  11 Sep 2010; Raúl Porcel <armin76@gentoo.org>
  targets/support/chroot-functions.sh:
  Apply patch to make stage2 quiet, thanks to Alexandre Nuno Milheiro
  <nunomilheiro@gmail.com>, gentoo bug #273664

  11 Sep 2010; Raúl Porcel <armin76@gentoo.org>
  targets/support/netboot2-final.sh:
  Fix sparc bug, gentoo bug 297231

  05 Sep 2010; Raúl Porcel <armin76@gentoo.org> AUTHORS, catalyst: