@@ -1,0 +1,3 @@
+#
+# asciidoc.conf for catalyst's man page
+#
