@@ -1,124 +1,0 @@
-.TH "CATALYST" "1" "December 8, 2005" "Catalyst 2.0" "Catalyst"
-
-.SH NAME
-catalyst \- The Gentoo Linux Release Engineering meta-tool
-
-.SH SYNOPSIS
-.TP
-
-.BR catalyst
-[\fIoptions\fR] [\fI\-f file\fR | \fI\-C keys\fR | \fI\-s version_stamp\fR] ...
-.TP
-
-.BR catalyst
-\fI\-\-help \-h\fR
-.TP
-
-.BR catalyst
-\fI\-\-version \-V\fR
-
-.SH DESCRIPTION
-\fBcatalyst\fR is the tool that the Gentoo Release Engineering team
-utilizes to build all Gentoo Linux releases. It is capable of building
-installation stages, bootable LiveCDs, netboot images, and Gentoo Reference
-Platform (GRP) sets. \fBcatalyst\fR is also capable of providing a simple
-tinderbox environment for ebuild/package testing.
-
-For more information, please visit the \fBcatalyst\fR project page
-on the web at <http://www.gentoo.org/proj/en/releng/catalyst>.
-
-.SH OPTIONS
-.TP
-
-.BR "\-\-clear\-autoresume " (\fB\-a\fR)
-This option is to be used to clear any autoresume points that have been saved
-for this target. It is used in conjunction with \-f, \-C, or both.
-.TP
-
-.BR "\-\-cli " (\fB\-C\fR)
-This option is to be used in place of a specfile. All options are passed
-to \fBcatalyst\fR on the commandline. Please note that this option must
-be the last option passed to \fBcatalyst\fR for everything to work correctly.
-.TP
-
-.BR "\-\-config " (\fB\-c\fR)
-Tell \fBcatalyst\fR to use a user-defined configuration file. A sample
-configuration file is installed at /etc/catalyst/catalyst.conf.
-.TP
-
-.BR "\-\-debug " (\fB\-d\fR)
-Enable debugging mode
-.TP
-
-.BR "\-\-fetchonly " (\fB\-F\fR)
-This tells \fBcatalyst\fR to only fetch distfiles for the given packages without
-performing any building.
-.TP
-
-.BR "\-\-file " (\fB\-f\fR)
-Tell \fBcatalyst\fR to use the user supplied specfile.
-.TP
-
-.BR "\-\-help " (\fB\-h\fR)
-Print the help message and exit
-.TP
-
-.BR "\-\-purge " (\fB\-p\fR)
-Tell \fBcatalyst\fR to clear all temporary directories, package caches, and
-autoresume flags for the given target.
-.TP
-
-.BR "\-\-snapshot " (\fB\-s\fR)
-Create a Portage snapshot using the specified identifier stamp.
-.TP
-
-.BR "\-\-verbose " (\fB\-v\fR)
-Enable verbose mode.
-
-.BR "\-\-version " (\fB\-V\fR)
-Print the version information and exit
-.TP
-
-.SH EXAMPLES
-.TP
-Using the commandline option (\-C, \-\-cli) to build a Portage snapshot:
-catalyst \-C target=snapshot version_stamp=my_date
-.TP
-Using the specfile option (\-f, \-\-file) to build a stage target:
-catalyst \-f stage1\-specfile.spec
-.TP
-Using the snapshot option (\-s, \-\-snapshot) to package a Portage snapshot
-using the datestamp 20051208:
-catalyst \-s 20051208
-
-.SH FILES
-.TP
-Example specfiles can be found in /usr/share/doc/catalyst-<version>/examples.
-An example configuration file can be found at /etc/catalyst/catalyst.conf.
-
-.SH BUGS
-.TP
-An up-to-date list of Catalyst bugs can always be found listed on the Gentoo
-Linux bug-tracking system at <http://bugs.gentoo.org>.
-
-.SH SEE ALSO
-.TP
-A more in-depth examination of Catalyst options and procedures can be found
-linked from the \fBcatalyst\fR project page, which is located at
-<http://www.gentoo.org/proj/en/releng/catalyst>.
-
-.SH NOTES
-.TP
-\fBCatalyst\fR is conceptually derived from the Gentoo livecd-ng and Gentoo
-stager projects, both of which were used to create pre-1.4 Gentoo releases.
-.LP
-\fBCatalyst\fR was originally conceived and coded by both Daniel Robbins and
-John Davis. It is currently maintained by Chris Gianelloni and Eric Edgar and
-hass been mostly re-written.
-
-.SH AUTHOR
-John Davis <zhen@gentoo.org>
-Chris Gianelloni <wolf31o2@gentoo.org>
-
-.SH "CVS HEADER"
-$Id: catalyst.1,v 1.5 2005/12/08 14:48:58 wolf31o2 Exp $
