@@ -3,6 +3,10 @@
 # Distributed under the GPL v2
 # $Id$
 
+  24 Jun 2011; Sebastian Pipping <sping@gentoo.org> Makefile,
+  doc/asciidoc.conf, doc/catalyst.1.txt, doc/make_subarch_table_guidexml.py:
+  Include list of supported subarches in man page.
+
   14 Apr 2011; Raúl Porcel <armin76@gentoo.org> catalyst:
   This is catalyst 2.0.6.916
 
